--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
         <div class="container-fluid col-xxl-10">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand mx-1" href="index.html"><span class="brandFont fs-3">JS</span></a>
-                <a class="navbar-brand mx-1" href="index.html">&nbsp; APP NAME</a>
+                <a class="navbar-brand mx-1" href="index.html">&nbsp; Lucky Number Even</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                         <a class="nav-link mx-1" href="code.html">App Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-1" target="_blank" href="#">GitHub Repo</a>
+                        <a class="nav-link mx-1" target="_blank" href="https://github.com/JorySmith/LuckyNumberEven">GitHub Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" target="_blank" href="https://www.joryiansmith.dev/">My Portfolio</a>
