--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: By Jory Smith</title>
+    <title>Lucky Number Even: By Jory Smith</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -30,7 +30,7 @@
         <div class="container-fluid col-xxl-10">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand mx-1" href="index.html"><span class="brandFont fs-3">JS</span></a>
-                <a class="navbar-brand mx-1" href="index.html">&nbsp; APP NAME</a>
+                <a class="navbar-brand mx-1" href="index.html">&nbsp; Lucky Number Even</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                         <a class="nav-link mx-1 active" aria-current="page" href="code.html">App Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-1" target="_blank" href="#">GitHub Repo</a>
+                        <a class="nav-link mx-1" target="_blank" href="https://github.com/JorySmith/LuckyNumberEven">GitHub Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" target="_blank" href="https://www.joryiansmith.dev/">My Portfolio</a>
@@ -60,7 +60,7 @@
     <!-- Main Section -->
     <main class="flex-shrink-0">
         <div class="container py-4 px-5 mt-5">
-            <h2 class="code-title border-1 border-bottom border-dark">The Code - App Name</h2>
+            <h2 class="code-title border-1 border-bottom border-dark">The Code - Lucky Number Even</h2>
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col-md-8">
                     <pre class="line-numbers">
