--- a/app.html
+++ b/app.html
@@ -47,7 +47,8 @@
                         <a class="nav-link mx-1" href="code.html">App Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-1" target="_blank" href="https://github.com/JorySmith/LuckyNumberEven">GitHub Repo</a>
+                        <a class="nav-link mx-1" target="_blank"
+                            href="https://github.com/JorySmith/LuckyNumberEven">GitHub Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-1" target="_blank" href="https://www.joryiansmith.dev/">My Portfolio</a>
@@ -59,8 +60,46 @@
 
     <!-- Main Section -->
     <main class="flex-shrink-0">
-        <div class="container">
-
+        <div class="container mt-5">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col-lg-4 border-end border-2">
+                    <h1>Lucky Number Even: A Coding Project</h1>
+                    <h4 class="lead">
+                        A JavaScript program that displays numbers from 0 to 100 while highlighting even numbers.
+                    </h4>
+                    <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+                    <p>
+                        Enter a starting value and ending value <br>
+                        Press the button and the values will appear.
+                    </p>
+                </div>
+                <div class="col-lg-8">
+                    <div>
+                        <h5>Enter Values</h5>
+                        <form class="row gy-2 gx-3">
+                            <div class="col">
+                                <input id="startValue" type="number" class="form-control" placeholder="Start Value"
+                                    value="0" aria-label="Start value">
+                            </div>
+                            <div class="col">
+                                <input id="endValue" type="number" class="form-control" placeholder="End Value"
+                                    value="100" aria-label="End value">
+                            </div>
+                            <div class="col-12 d-flex justify-content-md-end">
+                                <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Run Loop</button>
+                            </div>
+                        </form>
+                        <h2 class="mt-5 border-bottom border-2">Results</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <tbody id="results">
+                                    <!-- Results Go Here -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- Footer Section -->
